<resources>
    <string name="app_name">Mibu</string>
    <string name="logo">Logo</string>
    <string name="hint_username">Username</string>
    <string name="error_username">Enter a name that fits more than 4 characters!</string>
    <string name="alert_email_error">Invalid Email</string>
    <string name="hint_email">Email</string>
    <string name="alert_email_required">Email required!</string>
    <string name="alert_email_example_com_not_allowed">Email with @example.com domain is not allowed!</string>
    <string name="hint_password">Password</string>
    <string name="error_password">Password must be at least 8 characters long!</string>
    <string name="belum_punya_akun">Don\'t have an account?</string>
    <string name="description_onboard">Monitoring Ibu Hamil dan Balita</string>
    <string name="text_welcome">Mibu</string>
    <string name="title_menu1">Catat Kesehatan Bunda</string>
    <string name="description_menu1">Selamat datang di aplikasi kami! Inilah awal perjalanan Anda untuk Cek Kehamilan dengan mudah dan tertata, di monitoring langsung oleh Bidan anda.</string>
    <string name="title_menu2">Cek kesehatan lebih mudah dalam satu genggaman</string>
    <string name="description_menu2">Dapatkan akses cepat dan praktis ke informasi kesehatan Bunda dan anak, cukup dengan satu genggaman.</string>
    <string name="start_now">Mulai Sekarang</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_umur_kehamilan">Umur Kehamilan</string>
    <string name="lbl_nama_pemeriksa">Nama Pemeriksa</string>
    <string name="lbl_hari">Hari</string>
    <string name="msg_create_new_account">Buat Akun Baru</string>
    <string name="lbl_catatan_anak">CATATAN ANAK</string>
    <string name="lbl_kehamilan_ke">Kehamilan ke</string>
    <string name="lbl_20">20</string>
    <string name="msg_alredy_have_an_account">Sudah punya Akun? Login</string>
    <string name="lbl_keluhan">Keluhan:</string>
    <string name="msg_20_februari_2025">20 Februari 2025</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_berat_badan">Berat Badan</string>
    <string name="lbl_tindakan">Tindakan</string>
    <string name="lbl_siti_badilah">Siti Badilah</string>
    <string name="lbl_saran_bidan">Saran Bidan:</string>
    <string name="msg_catatan_kehamilan">Catatan Kehamilan</string>
    <string name="lbl_posyandu_mibu">Posyandu Mibu</string>
    <string name="msg_imunisasi_campak">Imunisasi Campak</string>
    <string name="lbl_120_80">120/80</string>
    <string name="lbl_2_bulan">2 Bulan</string>
    <string name="msg_tanggal_periksa">Tanggal Periksa Selanjutnya</string>
    <string name="msg_catatan_imunisasi">Catatan Imunisasi</string>
    <string name="lbl_atur_pola_makan">Atur pola makan</string>
    <string name="msg_imunisasi_tethanus">Imunisasi tethanus diphteria td&#13;</string>
    <string name="lbl_10_kg">10 Kg</string>
    <string name="lbl_nama">Nama</string>
    <string name="lbl_no_telepon">No Telepon</string>
    <string name="lbl_umur_ibu">Umur Ibu</string>
    <string name="msg_tempat_pemeriksaan">Tempat Pemeriksaan</string>
    <string name="lbl_minggu">Minggu</string>
    <string name="lbl_register">Register</string>
    <string name="lbl">:</string>
    <string name="lbl_kep">Kep</string>
    <string name="lbl_80_85_bpm">80-85   Bpm</string>
    <string name="msg_hasil_pemeriksaan">Hasil Pemeriksaan Lab</string>
    <string name="msg_nasehat_yang_disampaikan">Nasehat yang disampaikan</string>
    <string name="lbl_tanggal">TANGGAL</string>
    <string name="lbl_sub_judul">sub judul</string>
    <string name="lbl_bagus">Bagus</string>
    <string name="msg_rihana_ramadhani">Rihana Ramadhani</string>
    <string name="msg_hasil_catatan_kesehatan">HASIL CATATAN KESEHATAN</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_nama_suami">Nama Suami</string>
    <string name="msg_description_lorem">Description. Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do</string>
    <string name="msg_berat_badan_kg">Berat Badan (Kg)</string>
    <string name="lbl_detail_anak">Detail Anak:</string>
    <string name="lbl_7">7</string>
    <string name="lbl_view">View</string>
    <string name="lbl_mmhg">mmHg</string>
    <string name="lbl_tidak">Tidak</string>
    <string name="msg_detail_pemeriksa">Detail Pemeriksa:</string>
    <string name="msg_detail_imunisasi">Detail Imunisasi:</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_data_ibu">Data Ibu</string>
    <string name="msg_oky_agustina_cahyani">Oky Agustina Cahyani</string>
    <string name="lbl_tekanan_darah">Tekanan Darah</string>
    <string name="lbl_kaki_bengkak">Kaki Bengkak</string>
    <string name="lbl_tinggi_fundus">Tinggi Fundus</string>
    <string name="msg_terlalu_lelah_dan">Terlalu lelah dan tidak menjaga pola makan</string>
    <string name="lbl_welcome">Welcome,</string>
    <string name="lbl_70">70</string>
    <string name="lbl_umur_bulan">Umur (Bulan)</string>
    <string name="msg_imunisasi_dpt_hb_hib">Imunisasi DPT-HB-Hib 1 Polio 2</string>
    <string name="lbl_andi_susanto">Andi Susanto</string>
    <string name="lbl_kg">Kg</string>
    <string name="lbl_nama_lengkap">Nama Lengkap</string>
    <string name="msg_20_sep_2023_11_02">20 Sep 2023    11:02 am</string>
    <string name="lbl_tidak_ada">Tidak Ada</string>
    <string name="msg_20_sep_2023_11_45">20 Sep 2023    11:45 am</string>
    <string name="msg_02_sep_2023_08_45">02 Sep 2023    08:45 pm</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_imunisasi_campak2">Imunisasi campak rubella 1 dosis&#13;</string>
    <string name="lbl_umur_suami">Umur Suami</string>
    <string name="msg_imunisasi_campak3">Imunisasi campak rubella dan DT&#13;</string>
    <string name="msg_tips_kehamilan_sehat">Tips Kehamilan Sehat</string>
    <string name="lbl_alamat">Alamat</string>
    <string name="lbl_cm">Cm</string>
    <string name="msg_imunisasi_dpt_hb_hib4">Imunisasi DPT-HB-Hib 1 dosis</string>
    <string name="lbl_nik_ibu">NIK Ibu</string>
    <string name="lbl_letak_janin">Letak Janin</string>
    <string name="lbl_07_agustus_2070">07 Agustus 2070</string>
    <string name="lbl_tanggal_lahir">Tanggal Lahir&#13;</string>
    <string name="msg_imunisasi_dpt_hb_hib3">Imunisasi DPT-HB-Hib 3 Polio 4</string>
    <string name="msg_imunisasi_dpt_hb_hib2">Imunisasi DPT-HB-Hib 2 Polio 3</string>
    <string name="msg_12_sep_2023_02_05">12 Sep 2023    02:05 pm</string>
    <string name="lbl_sudah">Sudah</string>
    <string name="lbl_belum">Belum</string>
    <string name="msg_denyut_jantung_janin_menit">Denyut Jantung Janin/Menit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_catatan_kehamilan">Catatan</string>
    <string name="title_catatan_anak">Anak</string>
    <string name="title_settings">Settings</string>
    <string name="title_menu_1">Catat Kesehatan Bunda</string>
    <string name="desc_menu_1">Selamat datang di aplikasi kami! Inilah awal perjalanan Anda untuk Cek Kehamilan dengan mudah dan tertata, di monitoring langsung oleh Bidan anda</string>
    <string name="mulai">Mulai</string>
    <string name="title_menu_3">Monitoring Kehamilan Bunda</string>
    <string name="desc_menu_3">Dapatkan layanan monitoring kehamilan dengan aplikasi ponsel genggam.</string>
    <string name="title_menu_2">Cek kesehatan lebih mudah dalam satu genggaman</string>
    <string name="desc_menu_2">Dapatkan akses cepat dan praktis ke informasi kesehatan Bunda dan anak, cukup dengan satu genggaman.</string>
    <string name="title_menu_4">Periksa Imunisasi Anak</string>
    <string name="desc_menu_4">Pantau status imunisasi anak anda di aplikasi.</string>
    <string name="saya_ibu_hamil">Saya Ibu Hamil</string>
    <string name="saya_bidan">Saya Bidan</string>
    <string name="lanjut_ibu">Lanjut Sebagai Ibu Hamil</string>
    <string name="lanjut_bidan">Lanjut Sebagai Bidan</string>
    <string name="title_splash">Monitoring Ibu Hamil dan Balita</string>
    <string name="create_new_account">Create New Account</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="no_telepon">No Telepon</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already Have an Account?</string>
    <string name="login">Login</string>
    <string name="hint_umur">Umur Ibu</string>
    <string name="hint_kehamilanke">Kehamilan Ke</string>
    <string name="hint_suami">Nama Suami</string>
    <string name="hint_nama_suami">Nama Suami</string>
    <string name="hint_umur_suami">Umur Suami</string>
    <string name="hint_nik">NIK Ibu</string>
    <string name="login_welcome">Welcome Back! Login your email\nand password</string>
    <string name="your_password">Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Dont Have An Account?</string>
    <string name="welcome">Welcome</string>
    <string name="view">View</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_kesehatan">Catatan Kesehatan</string>
    <string name="tab_nifas">Catatan Nifas</string>
    <string name="title_data_anak">Data Anak</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="logout">Log Out</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="mibu">Mibu</string>
    <string name="about_mibu">Adalah sebuah aplikasi yang di khususkan untuk Ibu Hamil agar bisa memantau kesehatan dan memantau tumbuh kembang anak</string>
    <string name="detail_data_pribadi">Detail Data Pribadi</string>
    <string name="simpan">Simpan</string>
    <string name="kelahiran_ke">Kelahiran Ke</string>
    <string name="back">Back</string>
    <string name="hasil_catatan_kesehatan_ibu_hamil">HASIL CATATAN KESEHATAN</string>
    <string name="detail_kesehatan">Detail Kesehatan: </string>
    <string name="tekanan_darah">Tekanan Darah</string>
    <string name="berat_badan">Berat Badan (Kg)</string>
    <string name="umur_kehamilan_detail">Umur Kehamilan</string>
    <string name="tinggi_fundus_detail">Tinggi Fundus</string>
    <string name="letak_janin_detail">Letak Janin</string>
    <string name="detak_jantung">Denyut Janin</string>
    <string name="kaki_bengkak">Kaki Bengkak</string>
    <string name="hasil_lab_detail">Hasil Lab</string>
    <string name="tindakan">Tindakan</string>
    <string name="keluhan">Keluhan</string>
    <string name="saran_bidan">"Saran Bidan: "</string>
    <string name="nama_pemeriksa">Nama Pemeriksa</string>
    <string name="tempat_periksa">Tempat Periksa</string>
    <string name="periksa_selanjutnya_detail">Periksa Selanjutnya</string>
    <string name="advice">Saran</string>
    <string name="hasil_catatan_nifas">Hasil Catatan Nifas</string>
    <string name="kunjungan_nifas">Kunjungan Ke</string>
    <string name="asi">Periksa ASI</string>
    <string name="periksa_pendarahan_nifas">Pendarahan</string>
    <string name="jalan_lahir_nifas">Jalan Lahir</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="masalah">Masalah</string>
    <string name="no_str">No STR</string>
    <string name="title_activity_bidan_main">BidanMainActivity</string>
    <string name="artikel">Artikel</string>
    <string name="settings">Settings</string>
    <string name="cari_ibu_hamil">Cari Ibu Hamil..</string>
    <string name="daftar_ibu_hamil">Daftar Ibu Hamil</string>
</resources>